fix menu overflow

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,7 +48,7 @@
     background-color: var(--bg-body-light);
     display: block;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     position: absolute;
     z-index: 0;
     left: 50%;
